# src/handler/rest/locationearby.go
@@ -1,11 +1,10 @@
 package rest
 
 import (
-	"fmt"
 	"github.com/gorilla/schema"
 	"google.golang.org/appengine"
 	"net/http"
-
+	"strings"
 
 	"github.com/trongtb88/locationsvc/src/business/entity"
 )
@@ -13,15 +12,14 @@ import (
 var decoderMember = schema.NewDecoder()
 
 
-// @Summary Find name and address of 1 type of places (restaurants) located within a N kilometer radius  around 1 specific street name
-// @Description Find name and address of 1 type of places (restaurants) located within a N kilometer radius  around 1 specific street name
+// @Summary Find name and address of one kine of place (restaurants) located within a N kilometer radius  around 1 specific street name
+// @Description Find name and address of 1 type of place (restaurants) located within a N kilometer radius  around 1 specific street name
 // @Tags NearByLocations
 // @Accept json
 // @Produce json
-// @Security BasicAuth
-// @Param street_name query string false "Street Name"
-// @Param place_type query string true "Place Type" Enums(res, scheduler)
-// @Param radius query integer true "Radius" 0
+// @Param street_name query string true "Street Name eg : Sukhumvit, Thailand"
+// @Param place_type query string true "Place Type" Enums(restaurant, school)
+// @Param radius query integer true "Radius in kilometer"
 // @Param page_token query string false " "
 // @Success 200 {object} rest.ResponseGetLocationNearBy
 // @Failure 400 {object} rest.HTTPErrResp
@@ -39,13 +37,37 @@ func (rst *rest) GetLocationsNearBy(w http.ResponseWriter, r *http.Request) {
 	}
 
 	var param entity.LocationNearByParams
-	fmt.Println(r.Form)
+
 
 	err = decoderMember.Decode(&param, r.Form)
 	if err != nil {
 		rst.httpRespError(w, r, http.StatusBadRequest, entity.ErrorMessage{
 			Code:    "GetLocationsNearByError",
 			Message: err.Error(),
+		})
+		return
+	}
+
+	if len(strings.TrimSpace(param.StreetName)) == 0 {
+		rst.httpRespError(w, r, http.StatusBadRequest, entity.ErrorMessage{
+			Code:    "BadRequest",
+			Message: "Street Name must be not empty",
+		})
+		return
+	}
+
+	if len(strings.TrimSpace(param.PlaceType)) == 0 {
+		rst.httpRespError(w, r, http.StatusBadRequest, entity.ErrorMessage{
+			Code:    "BadRequest",
+			Message: "Place_type must be not empty",
+		})
+		return
+	}
+
+	if param.Radius == 0 {
+		rst.httpRespError(w, r, http.StatusBadRequest, entity.ErrorMessage{
+			Code:    "BadRequest",
+			Message: "Radius must > 0",
 		})
 		return
 	}
